# mcp-server-language-converter

./: .pre-commit-config.yaml  ANTLR_INTEGRATION_SUMMARY.md  ANTLR_NODE_MAPPING.md  BUILD_CFG_TROUBLESHOOTING.md  CLAUDE.md  COBOL_TOOLS_README.md  DFG_STATUS_REPORT.md  DOCUMENTATION_UPDATES.md  IMPLEMENTATION_SUMMARY.md  INSIGHTS.md  INVESTIGATION_SUMMARY.md  JSON_DFG_TEST_RESULTS.md  LICENSE  MODULES_OVERVIEW.md  PRESENTATION.md  README.md  STEP2_COMPLETE.md  STEP3_COMPLETE.md  alembic.ini  analyze_json_files.py  cfg_test_output.json  debug_pdg_control_deps.py  debug_pdg_mapping.py  dfg_summary.md  dfg_workflow_output.json  env.example  investigate_detailed_structures.py  investigate_statement_structures.py  mcp-config-cobol-analysis.json  parse_tree_antlr_output.json  parser_investigation_output.json  pyproject.toml  raw_parse_tree_output.json  regenerate_all_json.py  ruff.toml  save_dfg_to_json.py  serve_test.py  test_antlr_integration.py  test_antlr_parser.py  test_antlr_rule_names.py  (+33 more)
.cursor/rules/: python.mdc  uv.mdc
config/: tools.json
docker/: Dockerfile  docker-compose.yml  entrypoint.sh  supervisord.conf
docs/: API.md  ARCHITECTURE.md  CONTRIBUTING.md  DATABASE.md  DOCKER.md  HTTP_STREAMING.md  LANGGRAPH_ARCHITECTURE.md  MIGRATION_PLAN_DECORATOR_BASED_TOOLS.md  MIGRATION_QUICK_REFERENCE.md  OBSERVABILITY_IMPLEMENTATION_PLAN.md  SETUP.md  STREAMABLE_HTTP.md  TESTING_GUIDE.md  TESTING_MCP_INSPECTOR_SSE.md  TESTING_OBSERVABILITY.md  TESTING_PLAN.md  TESTING_QUICKSTART.md  USAGE.md
docs/cobol/: COBOL_ANALYSIS_TOOLS_GUIDE.md  COBOL_PARSER_RESEARCH.md  COBOL_REVERSE_ENGINEERING_PLAN.md  COBOL_SYSTEM_GRAPH_WORKFLOW.md  DESIGN_PROMPT_CONCISE.md  FULL_FIDELITY_AST.md  FULL_FIDELITY_IMPLEMENTATION_SUMMARY.md  PARSER_COMPARISON.md  README.md  TOOL_WORKFLOWS.md  UI_DESIGN_PROMPT.md  UI_DESIGN_PROMPT_COMPREHENSIVE.md  VARIABLE_EXTRACTION_EXAMPLES.md
docs/cobol/phase1/: COBOL_PHASE1_DETAILED.md  COBOL_PHASE1_STEP1.md  COBOL_PHASE1_STEP10.md  COBOL_PHASE1_STEP2.md  COBOL_PHASE1_STEP3.md  COBOL_PHASE1_STEP4.md  COBOL_PHASE1_STEP5.md  COBOL_PHASE1_STEP6.md  COBOL_PHASE1_STEP7.md  COBOL_PHASE1_STEP8.md  COBOL_PHASE1_STEP9.md
grammars/: Cobol85Preprocessor.g4
integration_test_output/: ast_summary.json  cfg_summary.json  dfg_summary.json
migrations/: env.py
migrations/versions/: a1b2c3d4e5f6_add_payload_size_columns.py  d483646e26ae_add_tool_executions_table.py
output/proleap/: VALIDATE-DATA.ast.json
scripts/: db.sh  demo_http_streaming.py  init_db.py  prepare_cobol_for_antlr.py  proleap_ast_export.py  proleap_full_asg_export.py  seed_external_mcp.py  seed_tools.py  start_all_servers.py  start_http_streaming.py  start_metrics_server.py  start_sse.py  start_stdio.py  start_streamable_http.py  test_cobol_parser.py  test_observability.sh  test_observability_integration.py
services/proleap-service/: Dockerfile  pom.xml
src/: __init__.py
src/core/: __init__.py  config.py  database.py
src/core/models/: __init__.py  cobol_analysis_model.py  cobol_asg.py  cobol_asg_model.py  complexity_metrics_model.py  external_mcp.py  tool.py  tool_execution.py  tool_execution_model.py  tool_model.py
src/core/repositories/: __init__.py  base.py  external_mcp_repository.py  tool_execution_repository.py  tool_repository.py
src/core/schemas/: __init__.py  cobol_analysis_schema.py  external_mcp.py  proleap_schemas.py  tool.py
src/core/services/: __init__.py  ast_builder_service.py  cfg_builder_service.py  cobol_parser_antlr_service.py  cobol_parser_service.py  dfg_builder_service.py  external_mcp_service.py  observability.py  observability_service.py  prometheus_metrics_service.py  tool_handlers_service.py  tool_service.py  tool_service_service.py
src/mcp_server/: __main__.py  server.py
src/mcp_servers/: __init__.py
src/mcp_servers/common/: base_server.py  config_loader.py  dynamic_loader.py  http_runner.py  observability_middleware.py  stdio_runner.py  streamable_http_runner.py  tool_registry.py  unified_runner.py
src/mcp_servers/general/: __main__.py  dynamic_tools.py  external_tools.py  server.py  tools.py
src/mcp_servers/mcp_cobol_analysis/: __init__.py  (+5 more)
tests/: __init__.py  conftest.py
tests/cobol_samples/: ACCOUNT-VALIDATOR-CLEAN.cbl  ACCOUNT-VALIDATOR-SIMPLE.cbl  ACCOUNT-VALIDATOR.cbl  CALCULATE-PENALTY-AUTO-CLEAN.cbl  CALCULATE-PENALTY.cbl  CUSTOMER-ACCOUNT-MAIN.cbl  INVOICE-PROCESSOR.cbl  README.md  README_JSON_FILES.md  ast.json  cfg.json  dfg.json
tests/core/: test_asg_builder.py  test_ast_builder.py  test_cfg_builder.py  test_cobol_parser.py  test_cobol_preprocessor.py  test_dfg_builder.py  test_repositories.py  test_tool_handlers.py
tests/mcp_server/: test_cobol_analysis_tools.py  test_decorator_integration.py  test_http_streaming.py  test_tool_registry.py
(+185 files in other folders)
